<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_dotted"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.berenice.fitness.MainActivity">

    <ImageView
        android:id="@+id/squarts_image"
        android:layout_width="250sp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/tripleimpact" />

    <RelativeLayout
        android:id="@+id/status_container_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/squarts_image"
        android:background="@drawable/status_container">

        <TextView
            android:id="@+id/description_text"
            style="@style/descText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_margin="3sp"
            android:text="You have an active plan"
            android:textSize="18dp" />

        <RelativeLayout
            android:id="@+id/status_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/description_text">

            <TextView
                android:id="@+id/start_date_label"
                style="@style/descText"
                android:layout_width="105sp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="3sp"
                android:text="@string/start_date" />

            <TextView
                android:id="@+id/start_date_text"
                style="@style/descValueText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/start_date_label"
                android:text="14 Oct 2014" />

            <TextView
                android:id="@+id/level_label"
                style="@style/descText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/start_date_label"
                android:layout_below="@+id/start_date_label"
                android:text="@string/level" />

            <TextView
                android:id="@+id/level_text"
                style="@style/descValueText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/start_date_text"
                android:layout_below="@+id/start_date_text"
                android:layout_toRightOf="@+id/level_label"
                android:text="Easy" />

            <TextView
                android:id="@+id/last_workout_label"
                style="@style/descText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/level_label"
                android:layout_below="@+id/level_label"
                android:text="@string/last_workout" />

            <TextView
                android:id="@+id/last_workout_text"
                style="@style/descValueText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/start_date_text"
                android:layout_below="@+id/level_text"
                android:layout_toRightOf="@+id/last_workout_label"
                android:text="Week 1/Day 1 (13,15,17,14,15,13)" />

            <TextView
                android:id="@+id/next_workout_label"
                style="@style/descText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/last_workout_label"
                android:layout_below="@+id/last_workout_text"
                android:layout_marginBottom="3sp"
                android:text="@string/next_workout" />

            <TextView
                android:id="@+id/next_workout_text"
                style="@style/descValueText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/last_workout_text"
                android:layout_below="@+id/last_workout_text"
                android:layout_toRightOf="@+id/next_workout_label"
                android:text="Week 1/Day 2 (13,15,17,14,15,13)" />
        </RelativeLayout>
    </RelativeLayout>


    <LinearLayout
        android:id="@+id/Layout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/status_container_layout"
        android:layout_marginTop="1dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:weightSum="1"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">



        <LinearLayout
            android:layout_width="169dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/status_container_layout"
            android:layout_marginTop="20sp"
            android:orientation="vertical">

        <Button
            android:id="@+id/start_button"
            style="@style/homeButton"
            android:background="@drawable/button_green"
            android:onClick="onStartClick"
            android:text="@string/start"
            android:textColor="#ffffff"
            android:layout_width="113dp" />

        <Button
            android:id="@+id/continue_button"
            style="@style/homeButton"
            android:background="@drawable/button_green"
            android:onClick="onContinueClick"
            android:text="@string/continue_text"
            android:textColor="#ffffff"
            android:layout_width="113dp" />

        <Button
            android:id="@+id/start_new_button"
            style="@style/homeButton"
            android:background="@drawable/button_green"
            android:onClick="onStartNewClick"
            android:text="@string/start_new_text"
            android:textColor="#ffffff"
            android:layout_width="113dp" />


    </LinearLayout>

        <LinearLayout
            android:layout_width="193dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/status_container_layout"
            android:layout_marginTop="20sp"
            android:orientation="vertical">


        <Button
            android:id="@+id/progress_button"
            style="@style/homeButton"
            android:background="@drawable/button_grey"
            android:onClick="onProgressClick"
            android:text="@string/my_progress"
            android:layout_width="113dp" />

        <Button
            android:id="@+id/instructions_button"
            style="@style/homeButton"
            android:background="@drawable/button_grey"
            android:onClick="onInstructionsClick"
            android:text="@string/instructions_text"
            android:layout_width="113dp" />

        <Button
            android:id="@+id/credits_button"
            style="@style/homeButton"
            android:background="@drawable/button_grey"
            android:onClick="onCreditsClick"
            android:text="@string/credits"
            android:layout_width="113dp" />
    </LinearLayout>



    </LinearLayout>
    <LinearLayout
        android:layout_width="193dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/status_container_layout"
        android:layout_marginTop="20sp"
        android:orientation="vertical">

    </LinearLayout>

    <Button
        android:id="@+id/calorias"
        style="@style/homeButton"
        android:background="@drawable/button_grey"
        android:onClick="onCreditsCalorias"
        android:text="@string/Calorias"
        android:layout_width="130dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="56dp" />
</RelativeLayout>
